# easy-recipes

./: .gitignore  LICENSE  credentials  deployment.yml  docker-compose-production.yml  docker-compose-testing.yml  docker-compose.yml  env-file.example  env-file.testing  readme.md
backend/: .dockerignore  Dockerfile  Dockerfile.testing  pyproject.toml  run-test.sh
backend/app/: __init__.py  auth.py  cli.py  config.py  database.py  errors.py  file_server.py  file_server_handler.py  utils.py
backend/app/crud/: __init__.py  base.py  ingredient.py  recipe.py
backend/app/file_server/: __init__.py  file.py  image.py  server.py
backend/app/image/: b64image.py  image_on_server.py  utils.py
backend/app/models/: base.py  ingredient.py  orm.py  recipe.py  references.py  schema.py
backend/app/models/database/: orm.py
backend/app/models/repositories/: core.py  ingredient.py
backend/app/models/schemas/: schema.py  validator.py  validators.py
backend/app/repositories/: ingredient.py
backend/app/routes/: ingredient.py  recipe.py
backend/app/schemas/: base.py  ingredient.py  recipe.py
backend/erecipes/: __init__.py  config.py  errors.py  models.py  schemas.py
backend/erecipes/models/: __init__.py  orm.py  schema.py
backend/erecipes/routes/: ingredient.py  recipe.py
backend/erecipes/tests/: conftest.py
backend/erecipes/tests/units/: test_ingredient.py  test_recipes.py
backend/es/: __init__.py  models.py
backend/migrations/versions/: 5b88c50f7056_check_db.py  60b498e2afb2_add_likes_column.py  b6d6938ba8b5_change_image_url_column_into_nullable.py  ba10cdb4f7b5_add_likes_column_to_ingredient.py  bc6cace70c50_init.py  c40048b46ab4_remove_name_s_uniqueness.py  d2e387668857_change_image_url_to_image_uri.py  de1b0cd7666e_add_description_column.py  e8545b3bff81_add_name_column.py
backend/tests/: conftest.py  mock_data.py  mocks.py  utils.py
backend/tests/integrations/: test_file_server.py  test_file_server_handler.py
backend/tests/units/: test_auth.py  test_file_server.py  test_image_handler.py  test_image_on_server.py  test_ingredient.py  test_recipes.py
backend/tests/units/file_server/: test_file.py  test_image.py  test_server.py
deploy/: backend-deployment.yml  env-file.example  frontend.yml  postgres-deployment.yml
deploy/backend/: backend.yml  env-file.backend.example  fileserver.yml  kustomization.yml
deploy/database/: env-file.database.example  kustomization.yml  postgres.yml  pvc.yml
fileserver/: Dockerfile  Dockerfile.testing  pyproject.toml
fileserver/app/: __init__.py  api.py  auth.py  config.py  constants.py  errors.py  filename_handler.py  utils.py
fileserver/tests/: conftest.py  test_api.py  test_auth.py  test_filename_handler.py
frontend/: .env  .env.production  Dockerfile  cypress.config.ts  cypress.d.ts  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts  vuetify.config.ts
frontend/cypress/support/: commands.ts  component.ts
frontend/src/: env.ts  main.ts  utils.ts
frontend/src/assets/: main.css
frontend/src/auth/: index.ts
frontend/src/components/: BaseForm.vue  BaseViewBanner.vue  CardIngredient.vue  CardIngredientCreate.vue  CardRecipe.vue  CardRecipeCreate.vue  CardRecipeDelete.vue  CardRecipeUpdate.vue  DeleteButton.vue  DialogError.vue  DialogLoading.vue  DialogSuccess.vue  FormImageInput.vue  FormIngredient.vue  FormRecipe.vue  HomeTitle.vue  IngredientDetails.vue  IngredientLikeButton.vue  IngredientRecipes.vue  IngredientViewBanner.vue  IngredientViewPagination.vue  MainAppBar.vue  MainHeader.vue  RecipeDetails.vue  RecipeIngredients.vue  RecipeIngredientsDialog.vue  RecipeIngredientsDialogSelect.vue  RecipeIngredientsDialogSelectCard.vue  RecipeLikeButton.vue  RecipeViewBanner.vue  RecipeViewPagination.vue  SummaryBox.vue
(+110 files in other folders)
