[project]
name = "easy-recipes"
version = "0.1"
authors = [{ name = "Khanh Duong Quoc", email = "dqkqdlot@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    "flask",
    "flask_migrate",
    "flask_sqlalchemy",
    "psycopg2",
    "pydantic",
    "python-dotenv",
]


[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "ruff",
    "mypy",
    "sqlalchemy[mypy]",
    "types-Flask-Migrate",
]

[tool.ruff]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "SIM",
    "W",
    "N",
    "B",
    "Q",
    "SIM",
    "PIE",
    "PL",
    "PT",
    "RET",
    "RUF",
]
line-length = 100
fixable = ["ALL"]
ignore = ["PLR2004"]

[tool.black]
line-length = 100

[tool.setuptools]
py-modules = []

[tool.mypy]
strict = true
exclude = ["migrations"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
filterwarnings = ["ignore: 'flask.Markup' is deprecated"]
addopts = "-vvv"
