[project]
name = "easy-recipes"
version = "0.1"
authors = [{ name = "Khanh Duong Quoc", email = "dqkqdlot@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    "flask",
    "flask_migrate",
    "flask_sqlalchemy",
    "gunicorn",
    "psycopg2",
    "pydantic",
    "python-dotenv",
]


[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "ruff",
    "sqlalchemy[mypy]",
    "types-Flask-Migrate",
]

[tool.ruff]
select = [
    "A",
    "B",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PIE",
    "PL",
    "PT",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "TD",
    "W",
]
line-length = 100
fixable = ["ALL"]
ignore = ["PLR2004", "TD003"]
exclude = ["migrations"]

[tool.black]
line-length = 100

[tool.setuptools]
py-modules = []

[tool.mypy]
strict = true
exclude = ["migrations"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
filterwarnings = ["ignore: 'flask.Markup' is deprecated"]
addopts = "-vvv"
