[project]
name = "easy-recipes"
version = "0.1"
authors = [{ name = "Khanh Duong Quoc", email = "dqkqdlot@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    "flask",
    "flask_migrate",
    "flask_sqlalchemy",
    "gunicorn",
    "psycopg2",
    "pydantic",
    "python-dotenv",
]


[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "ruff",
    "sqlalchemy[mypy]",
    "types-Flask-Migrate",
]

[tool.ruff]
select = ["ALL"]
line-length = 100
fixable = ["ALL"]
ignore = ["ANN101", "ANN102", "ANN401", "D", "PLR2004", "TD003", "TRY003"]
exclude = ["migrations"]

[tool.ruff.per-file-ignores]
"test*.py" = ["S101", "INP001"]


[tool.black]
line-length = 100

[tool.setuptools]
py-modules = []

[tool.mypy]
strict = true
exclude = ["migrations"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
filterwarnings = ["ignore: 'flask.Markup' is deprecated"]
addopts = "-vvv"
