[project]
name = "simple-file-server"
version = "0.1"
authors = [{ name = "Khanh Duong Quoc", email = "dqkqdlot@gmail.com" }]
license = { text = "MIT" }

dependencies = ["cryptography", "flask", "gunicorn", "pillow", "pydantic"]


[project.optional-dependencies]
dev = ["black", "mypy", "pytest", "ruff", "vulture"]

[tool.ruff]
select = ["ALL"]
line-length = 100
fixable = ["ALL"]
ignore = ["D", "TD003", "FIX002", "ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"test*.py" = ["S101", "PLR2004"]

[tool.black]
line-length = 100

[tool.setuptools]
py-modules = []

[tool.mypy]
strict = true

[tool.pytest.ini_options]
filterwarnings = ["ignore: 'flask.Markup' is deprecated"]
addopts = "-vvv"

[tool.vulture]
exclude = [".venv/"]
min_confidence = 61
